--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -12,9 +12,11 @@
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "framer-motion": "^4.0.3",
-    "next": "latest",
+    "next": "^12.0.2",
+    "nextjs": "0.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "strapi": "^3.6.8"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
