--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "framer-motion": "^4.0.3",
+    "graphql": "^16.0.1",
+    "graphql-request": "^3.6.1",
     "next": "^12.0.2",
+    "next-mdx-remote": "^3.0.8",
     "nextjs": "0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "strapi": "^3.6.8"
+    "strapi": "^3.6.8",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
