--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "date-fns": "^2.25.0",
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
