--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "chakra-ui-markdown-renderer": "^3.0.1",
     "date-fns": "^2.25.0",
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
@@ -20,7 +21,8 @@
     "nextjs": "0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "strapi": "^3.6.8",
+    "react-markdown": "^7.1.0",
+    "reading-time": "^1.5.0",
     "swr": "^1.0.1"
   },
   "devDependencies": {
