--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "chakra-ui-markdown-renderer": "^3.0.1",
     "date-fns": "^2.25.0",
+    "emotion-icons": "^3.27.0",
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
