--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.7",
     "chakra-ui-markdown-renderer": "^3.0.1",
     "date-fns": "^2.25.0",
     "emotion-icons": "^3.27.0",
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
+    "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "^12.0.2",
     "next-mdx-remote": "^3.0.8",
     "nextjs": "0.0.3",
