--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.7",
     "chakra-ui-markdown-renderer": "^3.0.1",
@@ -35,6 +36,12 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.0",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-slug": "^5.0.1",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-code-titles": "^0.1.2",
+    "remark-slug": "^7.0.1",
     "swr": "^1.0.1"
   },
   "devDependencies": {
