--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.0",
     "reading-time": "^1.5.0",
+    "rehype": "^12.0.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-title": "^1.0.0",
     "rehype-code-titles": "^1.0.3",
     "rehype-slug": "^5.0.1",
+    "remark-autolink-headings": "^7.0.1",
     "swr": "^1.0.1"
   },
   "devDependencies": {
