--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "node ./scripts/generate-sitemap.mjs",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
@@ -32,6 +34,7 @@
     "next": "^12.0.2",
     "next-mdx-remote": "^3.0.8",
     "nextjs": "0.0.3",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.0",
@@ -48,6 +51,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.3",
+    "globby": "^13.1.1",
     "typescript": "4.3.2"
   },
   "name": "with-chakra-ui-typescript-app",
