--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.3",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
     "globby": "^13.1.1",
     "typescript": "4.3.2"
   },
